cholera 0.5.1.9003
==================

- use main for title in snowMap().
- test snow.colors.


cholera 0.5.1.9002
==================

- enable case.set = "expected" in neighborhoodEuclidean() and plot.euclidean().


cholera 0.5.1.9001
==================

- amend print.voronoi().
- add pearsonResiduals() prototype.


cholera 0.5.1.9000
==================

- restore profilePlot().


cholera 0.5.1
==================

# Fixes #

- backward compatibility (R 3.4.4) related to base::isFALSE() & bug fix.
- fix for multiple results in walkingDistance() and walkingPath().

# Function Changes #

- enable ellipses (...) in plot.time_series() (#1).
- enable ellipses and negative selection in addPump().
- consolidate addEuclideanPath(), euclideanDistance(), euclideanPath(),
  walkingDistance() and walkingPath()

# New Functions #

- addBorder()
- addRoads()
- mapRange()


cholera 0.5.0
==================

# Data Changes #

- regular.cases and sim.ortho.proj:
  increase number of observations from 5K to 20K.

# Function Changes #

- "alpha.level" argument to control path transparency
    addEuclideanPath() and addWalkingPath()

- distance and time based "mileposts"
    addEuclideanPath() and addWalkingPath().
    plot.euclidean_path() and plot.walking_path().
    addMilePosts().

- "pump.subset" and "pump.select" arguments
    addCases(), addKernelDensity(), addMilePosts(), addNeighborhood(),
    neighborhoodEuclidean(), neighborhoodWalking()

- "walking.speed" argument added to:
    addMilePosts(), nearestPump(),
    addEuclideanPath(), euclideanDistance(), euclideanPath(),
    addWalkingPath(), walkingDistance(), walkingPath()

- euclideanDistance() no longer S3.
    generic S3 functionality moved to euclideanPath().

- multiCore() moved to multiCore.R.

- neighborhoodVoronoi()
    plot.voronoi() adds "euclidean.paths" argument for star graph.

- neighborhoodWalking()
    "area.polygons" related functions for plot_walking() moved to pearlString.R.

- simulateFatalities():